fix share padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ main {
   padding-left: 50px;
   box-shadow: 0px 0px 0px 1000px rgba(185, 225, 233, 0.499);
   background-color: rgba(185, 225, 233, 0.499);
+} 
+
+@media (pointer:none), (pointer:coarse) {
+  main {
+    padding-left: 0px;
+  } 
 }
 
 h1 {
